--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://USCKSEA.github.io/Webpage",
   "dependencies": {
     "cra-template": "1.2.0",
+    "framer-motion": "^12.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
