--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://USCKSEA.github.io/Webpage",
+  "homepage": "https://USCKSEA.github.io/USC-KSEA-Website",
   "dependencies": {
     "cra-template": "1.2.0",
     "framer-motion": "^12.6.2",
